@@ -1,3 +1,13 @@
+2006-07-27  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/disks.c: (create_disk_view):
+	* src/interface.c: (create_main_window):
+	* src/procdialogs.c: (procdialog_create_preferences_dialog):
+
+	Devices -> File Systems.
+	Closes #345737.
+
 2006-07-26  Benoît Dejean  <benoit@placenet.org>
 
 	* Makefile.am:
